TE-4282 Fixing visibility of search-bar on mobiles

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/search-form/search-form.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/molecules/search-form/search-form.scss
@@ -2,6 +2,16 @@
     #{$name} {
         position: relative;
 
+        &--fixed {
+            @include helper-visibility-invisible;
+            @include helper-effect-transition(transform visibility opacity);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            transform: translateY(-100%);
+        }
+
         &__button {
             position: absolute;
             top: 0;
