--- a/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
@@ -18,14 +18,7 @@
         }
 
         &__search-form {
-            @include helper-visibility-invisible;
-            @include helper-effect-transition(transform visibility opacity);
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
             z-index: $setting-zi-header + 1;
-            transform: translateY(-100%);
 
             &--active {
                 @include helper-visibility-visible;
